# ManimSlides_init

./: .gitignore  README.md  egofets_test.ipynb  environment.yml  presentacion.py  presentaciones.yaml  pyproject.toml
gallery/: 01_canvas_y_zoom.ipynb  01_canvas_y_zoom.py  02_video_en_escena.ipynb  02_video_en_escena.py  03_graficos_espectros.ipynb  03_graficos_espectros.py  04_estructuras_quimicas.ipynb  04_estructuras_quimicas.py
scripts/: workflow.py
toolkit/: __init__.py  canvas.py  chemistry.py  graphs.py  video.py
