[project]
name = "manim-slides-toolkit"
version = "0.1.0"
description = "Toolkit de presentaciones Manim Slides"
requires-python = ">=3.11"
dependencies = [
    "manim>=0.19",
    "manim-slides[magic]>=5.0",
    "jupyter",
    "notebook",
    "ipykernel",
    "opencv-python>=4.0",
    "scipy>=1.10",
    "pillow>=10.0",
]

[project.optional-dependencies]
chemistry = [
    "rdkit>=2024.0",
    "datamol>=0.12",
]
full = [
    "manim-slides-toolkit[chemistry]",
]
